fix: increase line height for readability

--- a/assets/src/js/admin/onboarding-wizard/app/steps/donation-form/style.scss
+++ b/assets/src/js/admin/onboarding-wizard/app/steps/donation-form/style.scss
@@ -55,7 +55,7 @@
 			font-family: Montserrat, Arial, Helvetica, sans-serif;
 			font-weight: 500;
 			font-size: 16px;
-			line-height: 24px;
+			line-height: 2;
 			color: #333;
 
 			padding: 0;
