--- a/assets/src/js/admin/onboarding-wizard/app/steps/introduction/style.scss
+++ b/assets/src/js/admin/onboarding-wizard/app/steps/introduction/style.scss
@@ -28,7 +28,7 @@
 	> p {
 		font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 		font-size: 16px;
-		line-height: 22px;
+		line-height: 1.5;
 		font-weight: 600;
 		text-align: center;
 		color: #424242;
